# xlsx-fixer

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/xlsx_fixer/: __init__.py  cli.py  fixer.py  license.py
tests/: test_batch.py  test_fixer.py  test_license.py
